Trailers Fragment implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,10 @@
     <string name="accountBar">Conta</string>
     <string name="profileBar">Perfil</string>
     <string name="logoutAccount">Perfil deslogado</string>
+    <string name="videoCardText">Video</string>
+    <string name="watchVideoCard">Assistir</string>
+    <string name="videoFragmentText">Trailers disponíveis</string>
+    <string name="favoritesMovies">Filmes</string>
+    <string name="favoritesSeries">Séries</string>
 
 </resources>
