Layout Search Fragment Updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,9 @@
     <string name="videoFragmentText">Trailers disponíveis</string>
     <string name="favoritesMovies">Filmes</string>
     <string name="favoritesSeries">Séries</string>
+    <string name="noavailableMovies">Ops, sem Trailer por aqui!</string>
+    <string name="backVideosFragment">Voltar</string>
+    <string name="notrailer">Ops! Nenhum trailer encontrado!</string>
+    <string name="title_share_card">Compartilhando Série/Filme</string>
 
 </resources>
